--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 </div>
                 <div class="w-full self-end px-4 lg:w-1/2">
                     <div class="relative mt-10 lg:mt-9 lg:right-0" >
-                        <img src="dist/img/profil.png" alt="mbak2" class="max-w-full mx-auto">
+                        <img src="profil.png" alt="mbak2" class="max-w-full mx-auto">
                         <span class="absolute bottom-0 -z-10 left-1/2 -translate-x-1/2 md:scale-125">
                             <svg width="400" height="400" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
                                 <path fill="#14b8a6" d="M41.7,-67.4C54.1,-57,64,-45.4,67.9,-32.4C71.7,-19.3,69.5,-4.8,68,10.3C66.6,25.4,66.1,41.1,58.1,50.5C50.2,60,34.8,63.2,21.2,63.1C7.5,63,-4.5,59.5,-16.9,56.4C-29.4,53.3,-42.3,50.6,-45.8,42.1C-49.3,33.7,-43.5,19.5,-47.7,5.4C-51.9,-8.6,-66.2,-22.7,-63,-28.4C-59.8,-34.1,-39.1,-31.4,-25.7,-41.3C-12.3,-51.3,-6.1,-73.9,4.3,-80.5C14.7,-87.2,29.4,-77.9,41.7,-67.4Z" transform="translate(100 100) scale(1.2)" />
